--- a/widgets/profile_example/pubspec.yaml
+++ b/widgets/profile_example/pubspec.yaml
@@ -19,3 +19,11 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+  fonts:
+    - family: BitCountProp
+      fonts:
+        - asset: assets/fonts/BitcountPropSingle-Regular.ttf
+        - asset: assets/fonts/BitcountPropSingle-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/BitcountPropSingle_Cursive-Regular.ttf
+          style: italic
