--- a/local_storage/stateful_dogs_example/pubspec.yaml
+++ b/local_storage/stateful_dogs_example/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   http: ^1.6.0
   path_provider: ^2.1.5
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
